- Added right mouse clicked signals to ClickableWidget (base class for several widgets) and Panel
- Added HeaderClicked signal to ListView
- Addded Signals namespace with strings for signals of all widgets
- Added VerticalScroll property to Slider, Scrollbar and SpinButton, for more intuitive usage
- Added SubwidgetContainer class that should simplify combining widgets for a custom widget
- SignalItem (used by ListBox and ComboBox) can now have the item index as optional parameter
- Container widgets didn't pass right click event to child widgets
- Widget state was incorrect when starting a show/hide animation while another was still busy
- Disabling tabs widget caused selected tab to be deselected
- Vertical alignment in Label didn't work correctly when there was a scrollbar
- Knob never responded to mouse events on places where the background texture was transparent
- Text color wasn't updated in MenuBar when disabling and re-enabling widget
- Unicode text wasn't properly handled when loading/saving widgets from/to a widget file
- Fixed potential crash when creating a ProgressBar
- ListView clipped content in expanded column


TGUI 0.8.5  (6 April 2019)
--------------------------

- Big improvements to Gui Builder
- Svg images are now supported
- ComboBox can now contain some text when no item is selected
- Added function to ComboBox to disallow changing the selected item by scrolling the mouse wheel
- Added RightClicked signal to ListView
- Added functions to ListView to change existing items
- Support typing tabs in TextBox (if tab usage is disabled in gui)
- Added function to signals to temporarily disable callbacks
- Added addition and subtraction operators to Outline
- ChildWindow can now have a different border color in focused state
- Added function to select item in TreeView
- EditBox::setInputValidator now returns false when regex was invalid
- Let ComboBox send the ItemSelected event only after the mouse is released