@@ -41,13 +41,14 @@ namespace tgui
     {
     public:
 
+#ifndef TGUI_REMOVE_DEPRECATED_CODE
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Sets the time that the mouse has to stand still before the tooltip becomes visible
         ///
         /// @param timeToDisplay Time before displaying tooltip
         ///
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        static void setTimeToDisplay(const sf::Time& timeToDisplay);
+        TGUI_DEPRECATED("Use setInitialDelay instead") static void setTimeToDisplay(const sf::Time& timeToDisplay);
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -56,7 +57,23 @@ namespace tgui
         /// @return Time before displaying tooltip
         ///
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-        static sf::Time getTimeToDisplay();
+        TGUI_DEPRECATED("Use getInitialDelay instead") static sf::Time getTimeToDisplay();
+#endif
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Sets the time that the mouse has to stand still before the tooltip becomes visible
+        ///
+        /// @param delay  Time before displaying tooltip
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        static void setInitialDelay(const sf::Time& delay);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the time that the mouse has to stand still before the tooltip becomes visible
+        ///
+        /// @return Time before displaying tooltip
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        static sf::Time getInitialDelay();
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
@@ -80,7 +97,7 @@ namespace tgui
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     private:
 
-        static sf::Time m_timeToDisplay;
+        static sf::Time m_initialDelay;
         static Vector2f m_distanceToMouse;
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
