@@ -31,21 +31,35 @@ namespace tgui
 {
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-    sf::Time ToolTip::m_timeToDisplay = sf::milliseconds(500);
+    sf::Time ToolTip::m_initialDelay = sf::milliseconds(500);
     Vector2f ToolTip::m_distanceToMouse = {5, 20};
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
     void ToolTip::setTimeToDisplay(const sf::Time& timeToDisplay)
     {
-        m_timeToDisplay = timeToDisplay;
+        m_initialDelay = timeToDisplay;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
     sf::Time ToolTip::getTimeToDisplay()
     {
-        return m_timeToDisplay;
+        return m_initialDelay;
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void ToolTip::setInitialDelay(const sf::Time& delay)
+    {
+        m_initialDelay = delay;
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    sf::Time ToolTip::getInitialDelay()
+    {
+        return m_initialDelay;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
